v3.8.9 (XXXX-XX-XX)
-------------------

* Prevent agency configuration confusion by an agent which comes back without
  its data directory and thus without its UUID.

* Use intermediate commits in old shard synchronization protocol. This avoids
  overly large RocksDB transactions when syncing large shards, which is a remedy
  for OOM kills during restarts.

* Don't log Boost ASIO warnings such as `asio IO error: 'stream truncated'` when
  a peer closes an SSL/TLS connection without performing a proper connection
  shutdown.

* Fixed Github issue #16451: In certain situations, a LIMIT inside a subquery
  could erroneously reduce the number of results of the containing (sub)query.

* Add missing metrics for user traffic: Histograms:
    `arangodb_client_user_connection_statistics_bytes_received`
    `arangodb_client_user_connection_statistics_bytes_sent`
  These numbers were so far only published via the statistics API.
  This is needed for Oasis traffic accounting.

* Fix HTTP/VST traffic accounting in internal statistics / metrics.

* Delay a MoveShard operation for leader change, until the old leader has
  actually assumed its leadership and until the new leader is actually in sync.
  This fixes a bug which could block a shard under certain circumstances. This
  fixes BTS-1110.

* Updated arangosync to v2.13.0.

* Fixed issue #17291: Server crash on error in the PRUNE expression.
  Traversal PRUNE expressions containing JavaScript user-defined functions
  (UDFs) are now properly rejected in single server and cluster mode.
  PRUNE expressions that use UDFs require a V8 context for execution, which is
  not available on DB-servers in a cluster, and also isn't necessarily available
  for regular queries on single servers (a V8 context is only available if a
  query was executed inside Foxx or from inside a JS transaction, but not
  otherwise).

* Updated OpenSSL to 1.1.1s.

* Solve a case of excessive memory consumption in certain AQL queries with IN